# nephos

./: .dockerignore  .env.example  .gitignore  .log4brains.yml  AGENTS.md  Dockerfile  PLANS.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.agents/: AGENTS.md
.agents/context/: nephos-api-resource-model.md  nephos-architecture.md  nephos-auth.md  nephos-backups.md  nephos-catalog-loading.md  nephos-catalog.md  nephos-contribution-and-agent-workflow.md  nephos-database-state.md  nephos-decisions.md  nephos-dev-workflow.md  nephos-doctrine.md  nephos-glossary.md  nephos-health-status.md  nephos-naming-and-metadata.md  nephos-non-goals.md  nephos-open-questions.md  nephos-packaging.md  nephos-phase1.md  nephos-reconciliation.md  nephos-reference-scenario.md  nephos-resource-policy.md  nephos-runtime-boundaries.md  nephos-service-ownership.md  nephos-stack.md  nephos-upgrades.md  nephos-vision.md
.ai/: README.md  claims.yaml
.ai/topics/: cli-operator.yaml  (+5 more)
deploy/: nephos-incluster.yaml
docs/: getting-started.md  maintainers.md
migrations/: 0000_initial.sql
scripts/: setup-local-routing.sh
tests/: catalog_fixtures.py  test_alpha_backbone_provisioning.py  test_apps_api.py  test_auth_api.py  test_bindings_api.py  test_bootstrap_drive.py  test_catalog_api.py  test_catalog_loader.py  test_cli.py  test_cli_setup.py  test_config.py  test_db_migrations.py  test_dependency_plan.py  test_deploy_manifest.py  test_dev_backbone.py  test_dev_reference.py  test_domain.py  test_engine_routing_provisioner.py  test_helm_runtime.py  test_hostctl.py  test_install_api.py  test_instance.py  test_kubernetes_client.py  test_kubernetes_runtime.py  test_kubernetes_runtime_integration.py  test_lifecycle_api.py  test_main.py  test_migrations.py  test_openbao_lifecycle.py  test_packaging.py  test_passwords.py  test_platform_domains_api.py  test_postgres_provisioning.py  test_provider_deployer.py  test_provider_router.py  test_pulumi_kubernetes_provider.py  test_reconciler.py  test_reconciler_runtime.py  test_reconciler_worker.py  test_registries.py  (+7 more)
(+157 files in other folders)
