[project]
name = "nephos-api"
version = "0.0.1"
description = "Nephos backend API and local control plane"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "kubernetes>=31.0.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0.0",
    "typer>=0.12.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
nephos-api = "nephos_api.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast unit tests that do not require Kubernetes",
    "integration: integration tests that may touch external systems",
    "k3s: tests that require explicit opt-in and a reachable K3s cluster",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
